tests/fixtures/positive/documentation/SingleLineDocumentationFormat.cls
public class Example {
    /** Valid single-line comment with spaces */
    public void method1() {
    }

    /**
     * Valid multi-line comment with multiple lines of content
     * This comment genuinely requires multiple lines
     * because it has substantial documentation
     */
    public void method2() {
    }

    /**
     * Another valid multi-line comment
     * @param value The input value
     * @return The result
     */
    public String method3(String value) {
        return value;
    }
}

