tests/fixtures/negative/documentation/SingleLineDocumentationFormat.cls
public class Example {
    /**Comment without spaces - violation*/
    public void method1() {
    }

    /** Comment without space before closing - violation */
    public void method2() {
    }

    /**
     * Multi-line comment that could be single line - violation
     */
    public void method3() {
    }
}

